--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,59 +8,69 @@
         android:id="@+id/btn_create_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="创建通知"/>
 
     <Button
         android:id="@+id/btn_update_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="更新通知"/>
 
     <Button
         android:id="@+id/btn_delete_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="删除通知"/>
 
     <Button
         android:id="@+id/btn_custom_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="自定义通知"/>
 
     <Button
         android:id="@+id/btn_suspension_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="5.0悬挂式通知"/>
-
-    <Button
-        android:id="@+id/btn_notification_channels"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="8.0增加通知渠道显示通知"/>
 
     <Button
         android:id="@+id/btn_notification_broadcast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="8.0增加点击通知广播接收"/>
+        android:onClick="onClick"
+        android:text="点击通知广播接收"/>
 
     <Button
         android:id="@+id/btn_select_notification_channels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="查看通知渠道设置信息"/>
 
     <Button
         android:id="@+id/btn_open_notification_channels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="打开通知渠道设置"/>
 
     <Button
         android:id="@+id/btn_delete_notification_channels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="删除通知渠道"/>
+
+    <Button
+        android:id="@+id/btn_add_notification_channels"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="添加通知渠道"/>
 </LinearLayout>
